CRUD básico da entidade categorias
