# src/controller/Categorias.js
@@ -2,36 +2,46 @@ import CategoriasDAO from "../DAO/CategoriasDAO.js"
 
 class Categorias{
 
-    get(req, res){
+    async get(req, res){
         // #swagger.description = 'Rota para categorias'
         try {
-            const response = CategoriasDAO.listar()
+            const response = await CategoriasDAO.listar()
             res.status(200).json(response)
         } catch (error) {
             res.status(400).json(error.message)
         }
     }
-    getId(req, res) {
+    async getId(req, res) {
         try {
-            const response = CategoriasDAO.listar(req.params.id)
+            const response = await CategoriasDAO.listar(req.params.id)
             res.status(200).json(response)
         } catch (error) {
             res.status(400).json(error.message)
         }
     }
-    post(req, res) {
+    async post(req, res) {
         try {
-            const response = CategoriasDAO.criar(req.body)
+            const response = await CategoriasDAO.criar(req.body)
             res.status(200).json(response)
         } catch (error) {
             res.status(400).json(error.message)
         }
     }
-    patch(req, res) {
-
+    async patch(req, res) {
+        try {
+            const response = await CategoriasDAO.atualizar(req.body, req.params.id)
+            res.status(200).json(response)
+        } catch (error) {
+            res.status(400).json(error.message)
+        }
     }
-    delete(req, res) {
-        
+    async delete(req, res) {
+        try {
+            const response = await CategoriasDAO.deletar(req.params.id)
+            res.status(200).json(response)
+        } catch (error) {
+            res.status(400).json(error.message)
+        }
     }
 }
 
